give up on seven seg

--- a/work/planAhead/Integrate1/Integrate1.runs/impl_1/mojo_top_0.ucf
+++ b/work/planAhead/Integrate1/Integrate1.runs/impl_1/mojo_top_0.ucf
@@ -5,6 +5,44 @@
 
 
 ####################################################################################
+# Constraints from file : 'io shield.ucf'
+####################################################################################
+
+
+
+
+NET "io_seg[0]" LOC = P5;
+NET "io_seg[0]" IOSTANDARD = LVTTL;
+NET "io_seg[1]" LOC = P8;
+NET "io_seg[1]" IOSTANDARD = LVTTL;
+NET "io_seg[2]" LOC = P144;
+NET "io_seg[2]" IOSTANDARD = LVTTL;
+NET "io_seg[3]" LOC = P143;
+NET "io_seg[3]" IOSTANDARD = LVTTL;
+NET "io_seg[4]" LOC = P2;
+NET "io_seg[4]" IOSTANDARD = LVTTL;
+NET "io_seg[5]" LOC = P6;
+NET "io_seg[5]" IOSTANDARD = LVTTL;
+NET "io_seg[6]" LOC = P1;
+NET "io_seg[6]" IOSTANDARD = LVTTL;
+NET "io_seg[7]" LOC = P141;
+NET "io_seg[7]" IOSTANDARD = LVTTL;
+
+NET "io_sel[0]" LOC = P9;
+NET "io_sel[0]" IOSTANDARD = LVTTL;
+NET "io_sel[1]" LOC = P10;
+NET "io_sel[1]" IOSTANDARD = LVTTL;
+NET "io_sel[2]" LOC = P7;
+NET "io_sel[2]" IOSTANDARD = LVTTL;
+NET "io_sel[3]" LOC = P12;
+NET "io_sel[3]" IOSTANDARD = LVTTL;
+
+# PULLDOWN is needed to prevent floating inputs
+
+
+
+
+####################################################################################
 # Constraints from file : 'custom.ucf'
 ####################################################################################
 
@@ -17,13 +55,9 @@ NET "button2" PULLUP;
 NET "button3" LOC = P75;
 NET "button3" IOSTANDARD = LVTTL;
 NET "button3" PULLUP;
-NET "high10" LOC = P1;
 NET "high10" IOSTANDARD = LVTTL;
-NET "high9" LOC = P5;
 NET "high9" IOSTANDARD = LVTTL;
-NET "high8" LOC = P7;
 NET "high8" IOSTANDARD = LVTTL;
-NET "high7" LOC = P9;
 NET "high7" IOSTANDARD = LVTTL;
 NET "high6" LOC = P11;
 NET "high6" IOSTANDARD = LVTTL;
