--- a/work/planAhead/Integrate1/Integrate1.runs/impl_1/.constrs/custom.ucf
+++ b/work/planAhead/Integrate1/Integrate1.runs/impl_1/.constrs/custom.ucf
@@ -7,13 +7,13 @@ NET "button2" PULLUP;
 NET "button3" LOC = P75;
 NET "button3" IOSTANDARD = LVTTL;
 NET "button3" PULLUP;
-NET "high10" LOC = P1;
+NET "high10" LOC = P1 | IOSTANDARD = LVTTL;
 NET "high10" IOSTANDARD = LVTTL;
-NET "high9" LOC = P5;
+NET "high9" LOC = P5 | IOSTANDARD = LVTTL;
 NET "high9" IOSTANDARD = LVTTL;
-NET "high8" LOC = P7;
+NET "high8" LOC = P7 | IOSTANDARD = LVTTL;
 NET "high8" IOSTANDARD = LVTTL;
-NET "high7" LOC = P9;
+NET "high7" LOC = P9 | IOSTANDARD = LVTTL;
 NET "high7" IOSTANDARD = LVTTL;
 NET "high6" LOC = P11;
 NET "high6" IOSTANDARD = LVTTL;
@@ -33,15 +33,3 @@ NET "low2" LOC = P22;
 NET "low2" IOSTANDARD = LVTTL;
 NET "low3" LOC = P17;
 NET "low3" IOSTANDARD = LVTTL;
-NET "sev_seg_sel<3>" LOC = P185 | IOSTANDARD = LVTTL;
-NET "ext_sev_seg<0>" LOC = P112 | IOSTANDARD = LVTTL;
-NET "ext_sev_seg<5>" LOC = P115 | IOSTANDARD = LVTTL;
-NET "sev_seg_sel<2>" LOC = P117 | IOSTANDARD = LVTTL;
-NET "sev_seg_sel<1>" LOC = P119 | IOSTANDARD = LVTTL;
-NET "ext_sev_seg<1>" LOC = P121 | IOSTANDARD = LVTTL;
-NET "ext_sev_seg<4>" LOC = P104 | IOSTANDARD = LVTTL;
-NET "ext_sev_seg<3>" LOC = P111 | IOSTANDARD = LVTTL;
-NET "ext_sev_seg<7>" LOC = P114 | IOSTANDARD = LVTTL;
-NET "ext_sev_seg<2>" LOC = P116 | IOSTANDARD = LVTTL;
-NET "ext_sev_seg<6>" LOC = P118 | IOSTANDARD = LVTTL;
-NET "sev_seg_sel<0>" LOC = P120 | IOSTANDARD = LVTTL;
